infra/kubernetes/base/networkpolicy/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-network-policy
  namespace: employee-management

spec:
  podSelector:
    matchLabels:
      app: employee-backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: employee-frontend

      ports:
        - protocol: TCP
          port: 8000
