infra/kubernetes/base/networkpolicy/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-network-policy
  namespace: employee-management

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: employee-backend

      ports:
        - protocol: TCP
          port: 5432
